{
    "name": "InputActions",
    "maps": [
        {
            "name": "UI",
            "id": "bf304a28-8b40-4935-8ed4-2145a71c5910",
            "actions": [
                {
                    "name": "HidePanel",
                    "type": "Button",
                    "id": "079673b4-71f3-4c65-9016-76d72ddd2ffa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "465e1d71-26e5-4855-9ab4-5497f251485d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseAll",
                    "type": "Button",
                    "id": "7b6e75dc-fd50-4a8f-bcd7-b6e3eea21c31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HideInventory",
                    "type": "Button",
                    "id": "8ed35440-1d44-4af8-a63b-8cdebb8883ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SaveGame",
                    "type": "Button",
                    "id": "961a0564-f8a6-4574-8d6d-d7e116518abf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitToMenu",
                    "type": "Button",
                    "id": "0eff651f-c60b-465c-9a0a-752d80b27891",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextDialogue",
                    "type": "Button",
                    "id": "49642e9f-2463-49c9-9f16-82be4b6af259",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkipDialogue",
                    "type": "Button",
                    "id": "aebfe948-a13d-47eb-8472-3fbc8f421103",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84dd8f80-f7f7-4e26-986c-af56b05d91b0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e114f25b-1e94-4a6e-9e43-3f09125b5d50",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "UseAll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afe90d89-0b2a-4e72-b986-2b0bae14ca50",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "HideInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f936db1-5fd4-4742-b0aa-eaa3099e4216",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "SaveGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acc26776-5054-4228-b2a8-54b082c64060",
                    "path": "<Keyboard>/end",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "ExitToMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59dcd6ab-f903-44f8-bfd1-c6eec7d8ff7a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "HidePanel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa20e1e9-4710-459c-ada1-8b6a402fc7e5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "NextDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5b4e5c6-2a27-4807-9537-fda361c670de",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "SkipDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gameplay",
            "id": "0ea1d748-92df-486d-85a8-08211a48fe31",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0eabcbf6-ea03-4dd7-a178-5dac88d6a257",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "49dcf7b1-c014-4f0c-b396-d87b309609b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "a7f1e384-02a3-4aac-b571-94251fd7f5a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability2",
                    "type": "Button",
                    "id": "2655efdd-6f0e-4349-9f47-0b82b3f490ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability3",
                    "type": "Button",
                    "id": "b53e4770-3075-4496-a25b-37513352acdf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityU",
                    "type": "Button",
                    "id": "3cc047c7-1e64-4c97-ad0b-d00b6110ca5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact1",
                    "type": "Button",
                    "id": "53b67cd5-f70c-42ad-85c0-8e292059cf0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact2",
                    "type": "Button",
                    "id": "96b2d38a-dd0e-4ac6-b076-06973e944311",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowPause",
                    "type": "Button",
                    "id": "42ea2042-a9fe-466d-98d6-0faf0bc3a225",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowInventory",
                    "type": "Button",
                    "id": "4393868c-99da-4bd7-995a-ede52c584b57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterGame",
                    "type": "Button",
                    "id": "99a90c5a-a8ff-462e-8c6c-d5e1d8b6581b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard Arrows",
                    "id": "9bec042e-5275-4c41-89d1-879ca869ba4a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "782ce819-e2d0-4153-92b9-2a76075985cc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "367c84b2-4e21-4d70-bfd4-d8b546610dee",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0d5c7ddd-aa12-47cc-9f37-e64cc6949816",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bb7968a6-eec0-4811-8e52-29e42ed63a53",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard WASD",
                    "id": "77b8b4ed-6113-403d-b5c0-40c15de9d13a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "34eff479-f45e-45b1-ba18-85f7ea3802ab",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "78c9140f-bb78-4f30-950a-c25e643b1afa",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "43e8443f-c4a7-4bc0-a470-3306daed7a7e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b1b894ea-36e0-45bb-a500-a281aed0470d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c9e33fb8-927f-466f-a84b-bbcfab1b33a4",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "caa78328-1f73-4ac2-b150-fe4b46b234a6",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "022d1187-48a0-45c8-a00f-96227b1ae9e3",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f6aaff9-c7ad-4b10-9cf2-9428b00b9a4a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc16cae2-f4d6-48b2-84a8-9fc84a051680",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64c2d4de-0f56-4910-a3b3-3b87c12e715f",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eaf1b83d-6e49-4bf3-9d92-d5a09ba73994",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Ability3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4290be86-20dc-4bd9-b87d-a9f4d1880145",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "AbilityU",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd5fefbc-eab8-4061-8969-c6688fe1a817",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Interact1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbbecca1-ecd2-4af3-b6d1-60b0ea52110b",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Interact2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6afce49-8310-46b8-830f-4cb60bb542ac",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "ShowPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5e36de0-9150-411a-bdb5-666ef104d711",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "ShowInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d83e10de-1b1a-48b7-b74e-59c8745d1d51",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "EnterGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Testing",
            "id": "70220496-189f-451f-b197-065346bd2eb6",
            "actions": [
                {
                    "name": "TakeDamage",
                    "type": "Button",
                    "id": "63c88859-6a6e-4c3e-9107-1f758875780b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Modifier",
                    "type": "Button",
                    "id": "374ab660-0dcd-4cd1-8aa0-c69a7c2fded9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a4214d0-17e7-446e-8e0e-8acb3eeb1e9a",
                    "path": "<Keyboard>/backspace",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "TakeDamage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23ca8311-ad8d-4234-8ee4-214377a84cbd",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Modifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}